# fastsim

./: CMakeLists.txt  README.md  experiment_1.cpp  experiment_2.cpp  experiment_3.cpp  fastsim2024.cpp  fastsim2024.sln  fastsim2024.vcxproj  fastsim2024.vcxproj.filters
examples/: lorenz.cpp  utsav_model.cpp  vanderpol.cpp
experiments/: experiment_2.cpp  experiment_3.cpp
experiments/internal/: experiment_2.cpp  experiment_3.cpp
experiments/researchlab/: exp_rlcp231.cpp  exp_rlcp232.cpp  exp_rlcp233.cpp  exp_rlcp234.cpp
lib/: jacobian.h  range.h  types.h
rocket/models/: liu_model.cpp  urm_model.h  utsav_model.cpp
rocket/models/lynx/: lynx.cpp  lynx.h  lynx_types.h
solvers/: euler.h  newton_raphson.h  runge_kutta.h
